Add macOS system files to .gitignore and remove .DS_Store from tracking

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,11 @@
 # Project-specific rules directory
 rules/projectspecific/
+
+# macOS system files
+.DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
+Thumbs.db
